feat(EIDOMNI-823): Refactor Trust Statement builders to use Nimbus claims and header structures