@@ -10,31 +10,16 @@ import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Blackbox unit tests for {@link PiTlsBuilder}.
- * <p>
- * Each test verifies observable output (header/payload claims) without any knowledge of
- * internal implementation details. Tests are structured according to the
- * {@code MethodName_StateUnderTest_ExpectedBehavior} convention.
- * </p>
- * <p>
- * Note: {@code iss} is intentionally absent (TP2 migration: iss no longer supported).
- * Note: {@code sub} is not a required claim for piTLS.
- * Note: {@code nbf} MAY differ from {@code iat} – the example shows {@code iat=1690360968},
- * {@code nbf=1721896968}.
- * </p>
  */
 class PiTlsBuilderTest {
 
     private static final String VALID_KID = "did:example:trust-issuer#key-1";
     private static final String VALID_JTI = "07f289d5-8b1f-4604-bf72-53bdcb71ee05";
 
-    // Matches the non-normative example: iat < nbf < exp
     private static final Instant IAT = Instant.ofEpochSecond(1690360968L);
     private static final Instant NBF = Instant.ofEpochSecond(1721896968L);
     private static final Instant EXP = Instant.ofEpochSecond(1753432968L);
 
-    // ── Helper ────────────────────────────────────────────────────────────────
-
-    /** Returns a fully configured builder that will pass all required-claim checks. */
     private PiTlsBuilder validBuilder() {
         return new PiTlsBuilder()
                 .withKid(VALID_KID)
@@ -50,33 +35,34 @@ class PiTlsBuilderTest {
     void build_validInput_headerContainsTypPiTls() {
         TrustStatementJwt jwt = validBuilder().build();
         assertEquals("swiyu-protected-issuance-trust-list-statement+jwt",
-                jwt.getHeader().get("typ"));
+                jwt.getJwsHeader().getType().getType());
     }
 
     @Test
     void build_validInput_headerContainsAlgES256() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertEquals("ES256", jwt.getHeader().get("alg"));
+        assertEquals("ES256", jwt.getJwsHeader().getAlgorithm().getName());
     }
 
     @Test
     void build_validInput_headerContainsKid() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertEquals(VALID_KID, jwt.getHeader().get("kid"));
+        assertEquals(VALID_KID, jwt.getJwsHeader().getKeyID());
     }
 
     @Test
     void build_validInput_headerContainsProfileVersion() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertEquals("swiss-profile-trust:1.0.0", jwt.getHeader().get("profile_version"));
+        assertEquals("swiss-profile-trust:1.0.0",
+                jwt.getJwsHeader().getCustomParam("profile_version"));
     }
 
-    // ── Payload – iss MUST NOT be present (TP2: iss no longer supported) ────────
+    // ── Payload – iss MUST NOT be present ─────────────────────────────────────
 
     @Test
     void build_validInput_payloadDoesNotContainIss() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertFalse(jwt.getPayload().containsKey("iss"),
+        assertNull(jwt.getClaimsSet().getIssuer(),
                 "iss must not be present – TP2 removes iss in favour of kid header");
     }
 
@@ -91,7 +77,7 @@ class PiTlsBuilderTest {
     @Test
     void build_withoutSub_payloadDoesNotContainSub() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertFalse(jwt.getPayload().containsKey("sub"),
+        assertNull(jwt.getClaimsSet().getSubject(),
                 "sub must not be present when not explicitly set");
     }
 
@@ -100,32 +86,32 @@ class PiTlsBuilderTest {
     @Test
     void build_validInput_payloadContainsJti() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertEquals(VALID_JTI, jwt.getPayload().get("jti"));
+        assertEquals(VALID_JTI, jwt.getClaimsSet().getJWTID());
     }
 
     @Test
     void build_validInput_payloadContainsIatAsEpochSeconds() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertEquals(1690360968L, jwt.getPayload().get("iat"));
+        assertEquals(1690360968L, jwt.getClaimsSet().getIssueTime().toInstant().getEpochSecond());
     }
 
     @Test
     void build_validInput_payloadContainsNbfAsEpochSeconds() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertEquals(1721896968L, jwt.getPayload().get("nbf"));
+        assertEquals(1721896968L, jwt.getClaimsSet().getNotBeforeTime().toInstant().getEpochSecond());
     }
 
     @Test
     void build_validInput_payloadNbfCanDifferFromIat() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertNotEquals(jwt.getPayload().get("iat"), jwt.getPayload().get("nbf"),
+        assertNotEquals(jwt.getClaimsSet().getIssueTime(), jwt.getClaimsSet().getNotBeforeTime(),
                 "piTLS allows nbf to differ from iat (delayed activation)");
     }
 
     @Test
     void build_validInput_payloadContainsExpAsEpochSeconds() {
         TrustStatementJwt jwt = validBuilder().build();
-        assertEquals(1753432968L, jwt.getPayload().get("exp"));
+        assertEquals(1753432968L, jwt.getClaimsSet().getExpirationTime().toInstant().getEpochSecond());
     }
 
     @Test
@@ -138,7 +124,7 @@ class PiTlsBuilderTest {
                 .withVctValues(List.of("urn:ch.admin.fedpol.eid"))
                 .build();
 
-        assertEquals(jwt.getPayload().get("iat"), jwt.getPayload().get("nbf"),
+        assertEquals(jwt.getClaimsSet().getIssueTime(), jwt.getClaimsSet().getNotBeforeTime(),
                 "2-param withValidity must set nbf == iat");
     }
 
@@ -149,7 +135,7 @@ class PiTlsBuilderTest {
     void build_validInput_payloadStatusHasCorrectStructure() {
         TrustStatementJwt jwt = validBuilder().build();
 
-        Map<String, Object> status = (Map<String, Object>) jwt.getPayload().get("status");
+        Map<String, Object> status = (Map<String, Object>) jwt.getClaimsSet().getClaim("status");
         assertNotNull(status, "status claim must be present");
 
         Map<String, Object> statusList = (Map<String, Object>) status.get("status_list");
@@ -165,10 +151,10 @@ class PiTlsBuilderTest {
     void build_singleVctValue_payloadContainsArrayWithOneEntry() {
         TrustStatementJwt jwt = validBuilder().build();
 
-        List<String> vctValues = (List<String>) jwt.getPayload().get("vct_values");
+        List<String> vctValues = (List<String>) jwt.getClaimsSet().getClaim("vct_values");
         assertNotNull(vctValues);
         assertEquals(1, vctValues.size());
-        assertEquals("urn:ch.admin.fedpol.eid", vctValues.get(0));
+        assertEquals("urn:ch.admin.fedpol.eid", vctValues.getFirst());
     }
 
     @Test
@@ -184,7 +170,7 @@ class PiTlsBuilderTest {
                         "urn:ch.admin.asa.driving-licence"))
                 .build();
 
-        List<String> vctValues = (List<String>) jwt.getPayload().get("vct_values");
+        List<String> vctValues = (List<String>) jwt.getClaimsSet().getClaim("vct_values");
         assertEquals(2, vctValues.size());
         assertEquals("urn:ch.admin.fedpol.eid", vctValues.get(0));
         assertEquals("urn:ch.admin.asa.driving-licence", vctValues.get(1));
@@ -199,7 +185,6 @@ class PiTlsBuilderTest {
                 .withStatus(0, "https://example.com/statuslists/1")
                 .withJti(VALID_JTI)
                 .withVctValues(List.of("urn:ch.admin.fedpol.eid"));
-
         assertThrows(TrustStatementValidationException.class, builder::build);
     }
 
@@ -210,7 +195,6 @@ class PiTlsBuilderTest {
                 .withStatus(0, "https://example.com/statuslists/1")
                 .withJti(VALID_JTI)
                 .withVctValues(List.of("urn:ch.admin.fedpol.eid"));
-
         assertThrows(TrustStatementValidationException.class, builder::build);
     }
 
@@ -221,7 +205,6 @@ class PiTlsBuilderTest {
                 .withValidity(IAT, NBF, EXP)
                 .withJti(VALID_JTI)
                 .withVctValues(List.of("urn:ch.admin.fedpol.eid"));
-
         assertThrows(TrustStatementValidationException.class, builder::build);
     }
 
@@ -232,7 +215,6 @@ class PiTlsBuilderTest {
                 .withValidity(IAT, NBF, EXP)
                 .withStatus(0, "https://example.com/statuslists/1")
                 .withVctValues(List.of("urn:ch.admin.fedpol.eid"));
-
         assertThrows(TrustStatementValidationException.class, builder::build);
     }
 
@@ -243,7 +225,6 @@ class PiTlsBuilderTest {
                 .withValidity(IAT, NBF, EXP)
                 .withStatus(0, "https://example.com/statuslists/1")
                 .withJti(VALID_JTI);
-
         assertThrows(TrustStatementValidationException.class, builder::build);
     }
 
@@ -291,4 +272,3 @@ class PiTlsBuilderTest {
                 () -> new PiTlsBuilder().withValidity(IAT, EXP, NBF));
     }
 }
-
